--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ before_install:
   - gem fetch rubinius-bundler-canary
 before_script: gem install bundler -v $BUNDLER_VERSION
 script:
+  - bundle --version
   - bundle install $BUNDLER_ARGS
   - rubinius-bundler-canary
