--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - gem fetch rubinius-bundler-canary
 before_script:
   - export RBX_VERSION=`ruby -e "puts Rubinius::VERSION"`
-  - gem uninstall -a -i /home/travis/.rvm/gems/rbx-$RBX_VERSION@global bundler
+  - gem uninstall --force -i /home/travis/.rvm/gems/rbx-$RBX_VERSION@global bundler
   - gem install bundler -v $BUNDLER_VERSION
 script:
   - bundle --version
