--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
   - BUNDLER_VERSION=1.5.1 BUNDLER_ARGS=--local
 rvm:
   - rbx
+  - rbx-2.2.3
 before_install:
   - mkdir -p vendor/cache
   - cd vendor/cache
